force-app/main/default/objects/Mentors__c/Mentors__c.object-meta.xml
<CustomObject>
    <label>Mentors</label>
    <nameField>
        <label>Mentors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>