force-app/main/default/objects/Mentors__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Mentors</relationshipLabel>
    <relationshipName>Mentors</relationshipName>
    <type>Lookup</type>
</CustomField>