force-app/main/default/objects/Mentors__c/fields/Mentor_Description_Long__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Description_Long__c</fullName>
    <label>Mentor Description Long</label>
    <type>TextArea</type>
</CustomField>