force-app/main/default/objects/Mentors__c/fields/Mentor_Description_Short__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Description_Short__c</fullName>
    <label>Mentor Description Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>