force-app/main/default/objects/Mentors__c/fields/Mentor_Designation__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Designation__c</fullName>
    <label>Mentor Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>