force-app/main/default/objects/Mentors__c/fields/Path_to_Achieve__c.field-meta.xml
<CustomField>
    <fullName>Path_to_Achieve__c</fullName>
    <label>Path to Achieve</label>
    <referenceTo>Path_to_Achieve__c</referenceTo>
    <relationshipLabel>Mentors</relationshipLabel>
    <relationshipName>Mentors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>